src/snapshots/terminal_rpg__ui__tests__combat_death_unicode.snap
---
source: src/ui.rs
expression: "rendered_game(DisplayProfile::default(), RunStatus::Death)"
---
┌ The Ossuary ───────────────────────────────────────┐┌ Status ────────────────┐
│                                                    ││GRAVE KNIGHT            │
│                                ▓▓▓▓▓               ││HP      0/32            │
│                             ··········             ││Armor   2               │
│                            ▓··········▓            ││1 Cleave  Ready         │
│                            ╬···········            ││2-0      Empty          │
│                            ▓··········▓            ││                        │
│                          ········@······▓          ││Turn    0               │
│                 ┌ Death ───────────────────────────────────┐ 54347           │
│                 │YOU DIED                                  │ v1              │
│                 │                                          │ 9               │
│                 │The Ossuary claims another oath-bound     │ None            │
│                 │soul.                                     │                 │
│                 │                                          │                 │
│                 │Press r for another descent or Q to quit. │                 │
│                 └──────────────────────────────────────────┘                 │
│                                                    ││                        │
│                                                    ││                        │
└────────────────────────────────────────────────────┘└────────────────────────┘
┌ Events ──────────────────────────────────────────────────────────────────────┐
│You descend into the ossuary.                                                 │
│The Grave Knight falls.                                                       │
└──────────────────────────────────────────────────────────────────────────────┘
Move qwe/asd/zxc + arrows | Skills 1:Cleave 2-0:Empty | ?:Help r:Restart Q:Quit
