src/snapshots/terminal_rpg__ui__tests__enemy_showcase_ascii.snap
---
source: src/ui.rs
expression: rendered_enemy_showcase(ascii)
---
+ The Ossuary ---------------------------------------++ Status ----------------+
|                                                    ||GRAVE KNIGHT            |
|                                #####               ||HP      32/32           |
|                             ..........             ||Armor   2               |
|                            #..........#            ||Cleave  Ready           |
|                            +...........            ||                        |
|                            #..........#            ||Turn    0               |
|                          sGC.....@......#          ||Seed    54347           |
|                            #..........#            ||Gen     v1              |
|                            #..........#            ||Enemies 3               |
|                            #..........             ||Threat  !1 *1 on @      |
|                                #####               ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
+----------------------------------------------------++------------------------+
+ Events ----------------------------------------------------------------------+
|Ghoul 2 marks a lunge.                                                        |
|Cultist 3 marks a hex.                                                        |
+------------------------------------------------------------------------------+
Move/attack: arrows/hjklyubn  Wait: .  Cleave: a  Help: ?  Restart: r  Quit: q
