src/snapshots/terminal_rpg__ui__tests__enemy_showcase_unicode.snap
---
source: src/ui.rs
expression: "rendered_enemy_showcase(DisplayProfile::default())"
---
┌ The Ossuary ───────────────────────────────────────┐┌ Status ────────────────┐
│                                                    ││GRAVE KNIGHT            │
│                                ▓▓▓▓▓               ││HP      32/32           │
│                             ··········             ││Armor   2               │
│                            ▓··········▓            ││1 Cleave  Ready         │
│                            ╬···········            ││2-0      Empty          │
│                            ▓··········▓            ││                        │
│                          sGC·····@······▓          ││Turn    0               │
│                            ▓··········▓            ││Seed    54347           │
│                            ▓··········▓            ││Gen     v1              │
│                            ▓··········             ││Enemies 3               │
│                                ▓▓▓▓▓               ││Threat  !1 *1 on @      │
│                                                    ││                        │
│                                                    ││                        │
│                                                    ││                        │
│                                                    ││                        │
│                                                    ││                        │
│                                                    ││                        │
└────────────────────────────────────────────────────┘└────────────────────────┘
┌ Events ──────────────────────────────────────────────────────────────────────┐
│Ghoul 2 marks a lunge.                                                        │
│Cultist 3 marks a hex.                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
Move qwe/asd/zxc + arrows | Skills 1:Cleave 2-0:Empty | ?:Help r:Restart Q:Quit
