src/snapshots/terminal_rpg__ui__tests__exploration_active_ascii.snap
---
source: src/ui.rs
expression: "rendered_game(ascii, RunStatus::Active)"
---
+ The Ossuary ---------------------------------------++ Status ----------------+
|                                                    ||GRAVE KNIGHT            |
|                                #####               ||HP      32/32           |
|                             ..........             ||Armor   2               |
|                            #..........#            ||Cleave  Ready           |
|                            +...........            ||                        |
|                            #..........#            ||Turn    0               |
|                          ........@......#          ||Seed    54347           |
|                            #..........#            ||Gen     v1              |
|                            #..........#            ||Enemies 9               |
|                            #..........             ||Threat  None            |
|                                #####               ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
+----------------------------------------------------++------------------------+
+ Events ----------------------------------------------------------------------+
|The crypt waits in silence.                                                   |
|You descend into the ossuary.                                                 |
+------------------------------------------------------------------------------+
Move/attack: arrows/hjklyubn  Wait: .  Cleave: a  Help: ?  Restart: r  Quit: q
