src/snapshots/terminal_rpg__ui__tests__exploration_help_ascii.snap
---
source: src/ui.rs
expression: "rendered_game_at(80, 24, ascii, RunStatus::Active, true)"
---
+ The Ossuary ---------------------------------------++ Status ----------------+
|                                                    ||GRAVE KNIGHT            |
|                                #####               ||HP      32/32           |
|                             ..........             ||Armor   2               |
|                            #..........#            ||1 Cleave  Ready         |
|                            +...........            ||2-0      Empty          |
|             + Help --------------------------------------------+             |
|             |Reach >. Move qwe/asd/zxc or arrows; s waits.     |             |
|             |Bump + doors. s Skeleton, g Ghoul, c Cultist.     |47           |
|             |! lunge, * hex. Movement and waiting use turns.   |             |
|             |                                                  |             |
|             |Skills: 1 Cleave | 2-0 Empty                      |e            |
|             |?: close | r: restart | Q: quit                   |             |
|             |                                                  |             |
|             |                                                  |             |
|             |                                                  |             |
|             |                                                  |             |
|             +--------------------------------------------------+             |
+----------------------------------------------------++------------------------+
+ Events ----------------------------------------------------------------------+
|The crypt waits in silence.                                                   |
|You descend into the ossuary.                                                 |
+------------------------------------------------------------------------------+
Move qwe/asd/zxc + arrows | Skills 1:Cleave 2-0:Empty | ?:Help r:Restart Q:Quit
