src/snapshots/terminal_rpg__ui__tests__exploration_small_unicode.snap
---
source: src/ui.rs
expression: "rendered_game_at(60, 20, DisplayProfile::default(), RunStatus::Active, false)"
---
┌ Terminal RPG ────────────────────────────────────────────┐
│Terminal too small: 60x20. Resize to at least 80x24. No   │
│turns pass while this message is shown.                   │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
